style.css
* {
    box-sizing: border-box;
    font-family: sans-serif;
    margin: 0px;
    padding: 0px;
}

html {
    -webkit-user-select: none; /* Safari */        
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+/Edge */
    user-select: none; /* Standard */
}

body {
    background: linear-gradient(to right, #e66465, #9198e5);
}

.calc-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 40px;
}

.screen {
    display: flex;
    flex-direction: column;
    background-color: rgba(0, 0, 0, .75);
    width: 400px;
    height: 120px;
    align-items: flex-end;
    justify-content: space-around;
    padding: 10px;
    border: 8px solid rgb(245, 146, 89);
    border-width: 12px 13px 8px 12px;
    border-radius: 12px 12px 0 0;
    word-wrap: break-word;
    word-break: break-all;
    flex-basis: content;
}

.previous-expression {
    color: rgba(255, 255, 255, .75);
    font-size: 1.5rem;
    min-height: 1.9rem;
}

.current-expression {
    color: white;
    font-size: 2.5rem;
    min-height: 2.9rem;
}

.keypad {
    display: flex;
    width: 400px;
    align-content: center;
    justify-content: center;
    flex-wrap: wrap;
    gap: 8px;
    padding: 10px 10px 20px 10px;
    background-color: rgb(245, 146, 89);
    border-radius: 0 0 10px 10px;
}

.key {
    border-radius: 5px;
    flex-basis: 22%;
    height: 70px;
    font-size: 24px;
}

.operation {
    background-color: rgb(109, 207, 202);
    color: white;
}

.span-two {
    border-radius: 5px;
    flex-basis: 46%;
    height: 70px;
    font-size: 24px
}

.key:hover,
.span-two:hover {
    background-color: rgb(226, 220, 220);
}

.operation:hover,
[data-equalto]:hover {
    background-color: rgb(36, 206, 197);
}

[data-equalto] {
    background-color: rgb(109, 207, 202);
    color: white;
}

footer {
    bottom: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

footer > div {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    width: 100%;
    padding: 5px;
    font-size: 20px;
}

.icon-credit {
    font-size: 16px;
    font-weight: bold;
    gap: 4px;
}

.icon-credit > a {
    text-decoration: none;
    color: black;
}

